--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
 mongodb_url =   "mongodb+srv://arunachalamv:0dHGi80tk2hBIEey@cluster0.iagoxe7.mongodb.net/?retryWrites=true&w=majority"
+
+jwt_Secretkey = "classBackendBookMyshow"
